# ghostwin

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  GhostWin.sln  GhostWin.slnx  _test_cmd.txt  ghostwin_log.txt  onboarding.md  run_wpf_poc.ps1
.bkit/audit/: 2026-03-28.jsonl  2026-03-29.jsonl  2026-03-30.jsonl  2026-03-31.jsonl  2026-04-01.jsonl  2026-04-02.jsonl  2026-04-03.jsonl
.bkit/runtime/: agent-state.json  error-log.json
.bkit/state/: memory.json  pdca-status.json  session-history.json
.claude/agents/: e2e-evaluator.md
.claude/rules/: behavior.md  build-environment.md  commit.md  documentation.md
artifacts/consensus-round-1/: agent-03.md  agent-04.md  agent-05.md
artifacts/round-fresh-1/: agent-03.md  agent-04.md  agent-05.md  agent-06.md  agent-07.md  agent-08.md  agent-10.md  evaluator.md
artifacts/round-ralph-1/: agent-01.md  agent-02.md  agent-03.md  agent-04.md  agent-05.md  agent-06.md  agent-07.md  agent-08.md  agent-09.md  agent-10.md  evaluator.md
artifacts/round-ralph-2/: agent-01.md  agent-02.md  agent-03.md  agent-04.md  agent-05.md  agent-06.md  agent-07.md  agent-08.md  agent-09.md  agent-10.md  evaluator.md
artifacts/round-ralph-3/: agent-01.md  agent-02.md  agent-03.md  agent-04.md  agent-05.md  agent-06.md  agent-07.md  agent-08.md  agent-09.md  agent-10.md  evaluator.md
artifacts/round-ralph-4/: agent-03.md
docs/: handoff-phase4b-ime-v2.md  handoff-phase4b-ime.md
docs/00-pm/: clipboard.prd.md  m13-input-ux.prd.md  mouse-input.prd.md  session-restore.prd.md
docs/00-research/: 2026-04-28-ui-completeness-audit.md  bind-surface-race-analysis.md  cmux-ai-agent-ux-research.md  conpty-research.md  e2e-bash-session-capabilities.md  ghostty-upstream-sync-analysis.md  mouse-input-benchmarking.md  mouse-scroll-benchmarking.md  render-diag-overhead.md  research-cleartype-90-percent.md  research-clipboard-copy-paste.md  research-dx11-gpu-rendering.md  research-libghostty-vt-windows.md  research-winui3-dx11.md  technical-feasibility-report.md  troubleshooting-windows-build.md  wpf-winexe-test-reference.md
docs/01-plan/: roadmap.md
docs/03-analysis/: cleartype-composition-worklog.md  cleartype-subpixel.analysis.md  conpty-integration.analysis.md  m13-input-ux.analysis.md  m16-a-design-system.analysis.md  mouse-input.analysis.md  phase-6-a-osc-notification-ring.analysis.md  session-restore.analysis.md
docs/04-report/: changelog.md  libghostty-vt-build.report.md  m1-verification-report.md  m2-verification-report.md  m3-verification-report.md  mouse-input.report.md  nerd-font-fallback.report.md  obsidian-project-map.report.md  titlebar-customization.report.md
docs/05-learning/: 01-terminal-parser-and-simd.md  02-conpty-integration-and-shutdown.md
docs/adr/: 001-simd-false-gnu-target.md  002-c-bridge-pattern.md  003-dll-dynamic-crt.md  004-utf8-source-encoding.md  005-sdk-version-pinning.md  006-vt-mutex-thread-safety.md  007-r32-quad-instance-format.md  008-two-pass-rendering.md  009-winui3-codeonly-cmake.md  010-grayscale-aa-composition.md  011-tsf-hidden-hwnd-ime.md  012-cjk-advance-centering.md  013-embedded-shader-source.md  013-scrollviewer-dpi-wheel-issue.md
scripts/: archive_status_update.ps1  arrange_compare.ps1  arrange_windows.ps1  build_full.cmd  build_ghostwin.ps1  build_incremental.ps1  build_libghostty.ps1  build_wpf.ps1  build_wpf_poc.ps1  capture_window.py  check_build_outputs.ps1  check_ime_strings.ps1  check_pdca_status.ps1  compare_sharpness.py  diag_baseline_launch.ps1  diag_e2e_all.ps1  diag_e2e_mq2.ps1  diag_e2e_mq6.ps1  diag_exp_c_raw_sendinput.ps1  diag_sanity_launch.ps1  find_engine_dll.ps1  find_recent_docs.ps1  find_recent_logs.ps1  input_all_terminals.py  inspect_ime_logs.ps1  measure_render_baseline.ps1  repro_first_pane.ps1  run_all_tests.py  run_with_log.ps1  run_wpf.ps1  run_wpf_diag.ps1  setup_winui.ps1  test_bs_precise.py  test_conpty_spacing.ps1  test_e2e.ps1  test_ghostwin.ps1  test_ime_external.py  test_input_auto.ps1  test_korean_auto.ps1  test_korean_complete.ps1  (+15 more)
scripts/e2e/: capture_poc.py  evaluator_prompt.md  evaluator_summary.schema.json  requirements.txt  runner.py
scripts/tests/: __init__.py  calibration.py  conftest.py  helpers.py  test_a_hangul.py  test_b_special.py  test_c_render.py  test_d_focus.py  test_e_unicode.py
src/: main.cpp
src/GhostWin.App/: App.xaml  App.xaml.cs  CommandPaletteWindow.xaml  CommandPaletteWindow.xaml.cs  GhostWin.App.csproj  MainWindow.xaml  MainWindow.xaml.cs
src/GhostWin.Core/: GhostWin.Core.csproj
src/GhostWin.Engine/: GhostWin.Engine.vcxproj
src/GhostWin.Hook/: GhostWin.Hook.csproj  Program.cs
src/GhostWin.Interop/: EngineService.cs  GhostWin.Interop.csproj  NativeCallbacks.cs  NativeEngine.cs  TsfBridge.cs  VirtualKeys.cs
src/GhostWin.Services/: GhostWin.Services.csproj  HookPipeServer.cs  OscNotificationService.cs  PaneLayoutService.cs  PaneLeafState.cs  SessionManager.cs  SessionSnapshotMapper.cs  SessionSnapshotService.cs  SettingsService.cs  WorkspaceService.cs
src/app/: ime_handler.cpp  ime_handler.h  main_winui.cpp  winui_app.cpp  winui_app.h
src/common/: error.h  log.h  render_constants.h  string_util.h
src/conpty/: conpty_session.cpp  conpty_session.h
src/engine-api/: ghostwin_engine.cpp  ghostwin_engine.h  surface_manager.cpp  surface_manager.h
src/platform/: cwd_query.cpp  cwd_query.h
src/renderer/: dx11_renderer.cpp  dx11_renderer.h  glyph_atlas.cpp  glyph_atlas.h  quad_builder.cpp  quad_builder.h  render_constants.h  render_perf.cpp  render_perf.h  render_state.cpp  render_state.h  shader_common.hlsl  shader_ps.hlsl  shader_vs.hlsl  terminal_window.cpp  terminal_window.h
test_results/: grid_info.json  results.json
tests/: conpty_benchmark.cpp  conpty_integration_test.cpp  dx11_render_test.cpp  ghostty_raw_test.c  quad_korean_test.cpp  render_state_test.cpp  session_visual_state_test.cpp  tsf_init_test.cpp  vt_bridge_cell_test.cpp  vt_core_test.cpp  vt_minimal_test.cpp
wpf-poc/: App.xaml  App.xaml.cs  GhostWinPoC.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
(+390 files in other folders)
